# metamod-gui

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build.sh  package.sh  vcpkg.json
src/: dllapi.cpp  engine_api.cpp  fltk_gui.cpp  fltk_gui.hpp  icon.xpm  meta_api.cpp  player_table.cpp  player_table.hpp
